# amazon-bedrock-agentcore-samples

./: .gitignore  CONTRIBUTORS.md  README.md
02-use-cases/customer-support-assistant-vpc/: .gitignore  DATA.md  README.md  cleanup.sh  deploy.sh  pyproject.toml
02-use-cases/customer-support-assistant-vpc/agent/: context.py  main.py  pyproject.toml  requirements.txt  utils.py
02-use-cases/customer-support-assistant-vpc/agent/prompt/: __init__.py
02-use-cases/customer-support-assistant-vpc/cloudformation/: agent-server-stack.yaml  aurora-postgres-stack.yaml  cognito-stack.yaml  customer-support-stack.yaml  dynamodb-stack.yaml  gateway-stack.yaml  mcp-server-stack.yaml  vpc-stack.yaml
02-use-cases/customer-support-assistant-vpc/frontend/: .env.example  README.md  index.html  package-lock.json  package.json  setup-env.sh  tailwind.config.js  vite.config.js
02-use-cases/customer-support-assistant-vpc/frontend/src/: App.jsx  amplifyconfiguration.ts  index.css  utils.ts
02-use-cases/customer-support-assistant-vpc/frontend/src/components/: ChatContainer.tsx  ChatInput.tsx  ChatMessage.tsx  Sidebar.tsx  (+2 more)
02-use-cases/customer-support-assistant-vpc/mcp_dynamodb/: main.py  pyproject.toml  requirements.txt
02-use-cases/customer-support-assistant-vpc/test/: connect_agent.py  connect_gateway.py  connect_mcp.py  utils.py
02-use-cases/market-trends-agent/: .gitignore  README.md  cleanup.py  deploy.py  market_trends_agent.py  pyproject.toml  requirements.txt  test_agent.py  test_broker_card.py
02-use-cases/market-trends-agent/tools/: __init__.py  broker_card_tools.py  browser_tool.py  memory_tools.py
03-integrations/observability/dynatrace/: README.md  dynatrace.py  main.py  pyproject.toml  travel_agent.py
(+311 files in other folders)
