[project]
name = "agent-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3",
    "bedrock-agentcore",
    "bedrock-agentcore-starter-toolkit",
    "uv",
    "strands-agents-tools",
    "strands-agents",
    "opentelemetry-sdk",
]
